--- a/src/containers/GiftNew/GiftAdd/GiftAdd.less
+++ b/src/containers/GiftNew/GiftAdd/GiftAdd.less
@@ -29,7 +29,21 @@
 }
 
 
-
+.wrapperType111{
+    :global{
+        label[for=subRule]{
+            position: relative;
+            left: -104px;
+        }
+    }
+    .subRule{
+        position: relative;
+        left: -102px;
+    }
+}
+.subRule{
+    display: block;
+}
 .customProgressBar{
     :global{
         .stepsContent{
