--- a/src/containers/ShareRules/style.less
+++ b/src/containers/ShareRules/style.less
@@ -266,8 +266,12 @@
             }
             span {
                 float: left;
+                max-width: 165px;
                 margin-left: 6px;
                 margin-top: -1px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
             }
         }
 
