--- a/src/containers/SpecialPromotionNEW/common/addGifts.less
+++ b/src/containers/SpecialPromotionNEW/common/addGifts.less
@@ -60,7 +60,7 @@
     justify-content: space-between;
 }
 .grayTopBox {
-    padding-left: 12px;
+    // padding-left: 12px;
     background:rgba(248,248,248,1);
     border-bottom: 1px solid rgba(217,217,217,1);
     border: 1px solid rgba(217,217,217,1);
@@ -72,6 +72,7 @@
     // background:rgba(248,248,248,1);
     // border-bottom: 1px solid rgba(217,217,217,1);
     padding: 0 12px;
+    margin-left: 12px;
     display: flex;
     line-height: 40px;
     padding-left: 0;
