--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -172,3 +172,15 @@
         }
     }
 }
+
+.SuccessModalContentBox {
+    .IndirectBox {
+        position: relative;
+    }
+    .authorizeTip {
+        position: absolute;
+        width: 90px;
+        padding-left: 7px;
+        font-size: 12px;
+    }
+}
