--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -173,14 +173,63 @@
     }
 }
 
+.AuthModalContentBox {
+    .authTip {
+        display: flex;
+        padding: 12px 18px 8px 17px;
+        background: #FFFBE6;
+        border-radius: 4px;
+
+    }
+}
 .SuccessModalContentBox {
     .IndirectBox {
         position: relative;
+        background: #F7F7F7;
+        border-radius: 4px;
     }
     .authorizeTip {
         position: absolute;
         width: 90px;
-        padding-left: 7px;
+        margin-left: 25px;
         font-size: 12px;
+    }
+    .indirectSelect {
+        padding: 10px 18px 10px 12px;
+    }
+    .authorizeBottomTip {
+        height: auto;
+        padding: 9px 17px;
+        background: #FFFBE6;
+        border-radius: 0px 0px 4px 4px;
+    }
+    .goAuthorize {
+        cursor: pointer;
+        color: #12B493;
+    }
+    .DirectBox {
+        background: #F7F7F7;
+        border-radius: 4px;
+    }
+    .directSelect {
+        padding: 10px 18px 10px 12px;
+    }
+    
+}
+.PromotionModalContentBox {
+    padding: 0 60px;
+    .promotionFooter {
+        text-align: center;
+        :global {
+            .ant-btn {
+                width: 104px;
+                height: 42px;
+                margin-top: 30px;
+                font-size: 16px;
+            }
+        }
+    }
+    .cancelBtn {
+        margin-right: 12px;
     }
 }
