第三方券管理页面

--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -305,3 +305,24 @@
         }
     }
 }
+
+// 第三方券管理
+.CouponManageListBox {
+    .pageContentWrapper {
+        background-color: #FFFFFF;
+        padding: 15px 30px 30px;
+    }
+    .customHeader {
+        font-size: 20px;
+        color: #595959;
+    }
+    .headerWithBgColor {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        line-height: 50px;
+        background-color: #FFFFFF;
+        padding: 0 20px;
+        overflow: hidden;
+    }
+}
