新建券码暂存

--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -194,7 +194,7 @@
     }
 }
 .crmSuccessModalContentBox {
-    margin-top: 28px;
+    // margin-top: 28px;
     .IndirectBox {
         position: relative;
         background: #F7F7F7;
