--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -192,6 +192,17 @@
         border-radius: 4px;
 
     }
+    .promotionFooter {
+        text-align: center;
+        :global {
+            .ant-btn {
+                width: 104px;
+                height: 42px;
+                margin-top: 30px;
+                font-size: 16px;
+            }
+        }
+    }
 }
 .crmSuccessModalContentBox {
     // margin-top: 28px;
