--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -146,6 +146,10 @@
             color: #12B493;
             background: rgba(27, 180, 150, .12);
         }
+        .pendding {
+            background: rgba(235, 154, 50, .12);
+            color: #EB9A32;
+        }
         .suspend {
             color: #FF5959;
             background: rgba(255, 89, 89, .12);
