--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -165,6 +165,8 @@
             padding-right: 16px;
         }
         .cardBtn {
+            position: relative;
+            z-index: 10;
             padding-top: 1px;
             font-size: 12px;
             font-weight: 500;
