支付成功页创建-列表-编辑-查看 api联调

--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -130,8 +130,8 @@
         }
         .activeCardTime {
             overflow: hidden;
-            max-width: 145px;
-            width: 145px;
+            max-width: 76px;
+            width: 76px;
             text-overflow: ellipsis;
             white-space: nowrap;
         }
@@ -220,6 +220,10 @@
         border-radius: 4px;
         margin-top: 6px;
         margin-bottom: 10px;
+        // .authorizeBottomTip {
+        //     background: #FFFBE6;
+        //     border-radius: 0px 0px 4px 4px;
+        // } 
     }
     .authorizeTip {
         position: absolute;
@@ -227,12 +231,19 @@
         margin-left: 25px;
         font-size: 12px;
     }
+    .noAuth {
+        color: #FF2D2D;
+    }
+    .authed {
+        color: #12B493;
+    }
     .indirectSelect {
         padding: 10px 18px 10px 12px;
     }
     .authorizeBottomTip {
-        height: auto;
-        padding: 9px 17px;
+        height: 40px;
+        line-height: 40px;
+        padding-left: 13px;
         background: #FFFBE6;
         border-radius: 0px 0px 4px 4px;
     }
