详情查看创建时间

--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -26,6 +26,25 @@
     padding: 16px 0 16px 14px;
     background: #F7F7F7;
     border-radius: 4px; 
+    .imageUploadItem {
+        // :global{
+        //     .uploader {
+        //         float: left;
+        //     }
+        // } 
+        // display: flex;
+        // align-items: center;
+        // .uploader {
+        //     float: left;
+        // }
+        // :global {
+        //     .ant-form-item-control-wrapper {
+        //         .ant-form-item-control {
+                   
+        //         }
+        //     }
+        // }
+    }
 }
 .SuccessPageBox, .PromotionPageBox {
     height: 100%;
