代运营授权

--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -172,6 +172,7 @@
             color: #EB9A32;
         }
         .suspend {
+            width: 78px;
             color: #FF5959;
             background: rgba(255, 89, 89, .12);
         }
@@ -271,6 +272,7 @@
         color: #12B493;
     }
     .DirectBox {
+        position: relative;
         background: #F7F7F7;
         border-radius: 4px;
     }
