--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1375,6 +1375,9 @@
 .cardWrap_21{
     .cardWrap(@shallowOrange);
 }
+.cardWrap_22{
+    .cardWrap(@deepOrange);
+}
 
 .priceInputSingle{
     :global{
