--- a/src/containers/SaleCenterNEW/AthActivitiesPage.less
+++ b/src/containers/SaleCenterNEW/AthActivitiesPage.less
@@ -1588,7 +1588,9 @@
  .cardWrap_21{
      .cardWrap(@shallowOrange);
  }
- 
+ .cardWrap_22{
+    .cardWrap(@deepOrange);
+}
  .priceInputSingle{
     :global{
  
