消费券返券活动增加礼品相关消息推送

--- a/src/containers/SaleActives/CreateActive.less
+++ b/src/containers/SaleActives/CreateActive.less
@@ -113,3 +113,28 @@
         align-items:center ;
     }
 }
+.settingBtn{
+    margin-top: 9px;
+    padding:0 13px;
+    width: 293px;
+    height: 36px;
+    line-height: 36px;
+    background: #FFFBE6;
+    border-radius: 4px;
+    .warningIcon{
+        font-size: 12px;
+        color: #faad14;
+    }
+    .confirmMsg{
+        font-size: 12px;
+        color: #666;
+        margin-left: 12px;
+    }
+    .goToSetting{
+        width: 75px;
+        display: inline-block;
+        background:transparent;
+        border: none;
+        color: #12B493;
+    }
+}
