--- a/src/containers/AlipayCouponDelivery/AlipayCoupon.less
+++ b/src/containers/AlipayCouponDelivery/AlipayCoupon.less
@@ -443,3 +443,27 @@
         }
     }
 }
+
+.createCouponModal__flex__ul {
+    display: flex;
+    justify-content: center;
+    .createCouponModal__item__li {
+        img  {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            margin-bottom: 16px;
+        }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 148px;
+        height: 148px;
+        background: #FFFFFF;
+        box-shadow: 0px 2px 12px 0px rgba(218, 218, 218, 0.5);
+        border-radius: 12px;
+        border: 1px solid #F6F6F6;
+        cursor: pointer;
+    }
+}
