--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -488,6 +488,20 @@
     padding: 15px 15px 0 15px;
     background: #FFFFFF;
     border-radius: 0px 0px 10px 0px;
+    .wxCouponTips {
+        height: 36px;
+        padding-left: 13px;
+        margin-bottom: 4px;
+        background: #FFFBE6;
+        border-radius: 4px;
+        line-height: 36px;
+        color: #666666;
+        > span {
+            display: inline-block;
+            padding-left: 8px;
+        }
+    }
+
 }
 .Main-top-title{
     font-weight: bold;
