千人千面三步页面UI

--- a/src/containers/PromotionV3/ManyFace/style.less
+++ b/src/containers/PromotionV3/ManyFace/style.less
@@ -87,18 +87,19 @@
     }
 }
 
-// step3
-.titBox{
-    vertical-align: middle;
-    .titleTip{
-        border-left: 3px solid #1ab495;
-        padding: 0 3px;
-        font-size: 14px;
-        line-height: 20px;
-        color: #333;
-        margin: 0 0 10px;
-        float: left;
-        margin:  10px 10px 8px 0;
-    }
-}
+// // step3
+// .titBox{
+//     vertical-align: middle;
+//     .titleTip{
+//         border-left: 3px solid #1ab495;
+//         padding: 0 3px;
+//         font-size: 14px;
+//         line-height: 20px;
+//         color: #333;
+//         margin: 0 0 10px;
+//         float: left;
+//         margin:  10px 10px 8px 0;
+//     }
+// }
 
+// step3
