--- a/src/containers/PromotionV3/Camp/MyFaceRule/styles.less
+++ b/src/containers/PromotionV3/Camp/MyFaceRule/styles.less
@@ -8,6 +8,7 @@
       padding: 0 20px;
       background: #f9f9f9;
       border-radius: 4px;
+      margin-right: 8px;
       > span {
           display: inline-block;
           position: absolute;
