face-更新新增-联动-编辑-查看

--- a/src/containers/PromotionV3/Camp/MyFaceRule/styles.less
+++ b/src/containers/PromotionV3/Camp/MyFaceRule/styles.less
@@ -1,10 +1,10 @@
 .MyFaceRuleBox {
   display: flex;
-  
+  margin-bottom: 16px;
   .MyFaceRuleConntet {
       position: relative;
       width: 550px;
-      height: 120px;
+      height: 130px;
       padding: 0 20px;
       background: #f9f9f9;
       border-radius: 4px;
