会员标签校验

--- a/src/containers/PromotionV3/Camp/MyFaceRule/styles.less
+++ b/src/containers/PromotionV3/Camp/MyFaceRule/styles.less
@@ -1,6 +1,7 @@
 .MyFaceRuleBox {
   display: flex;
   margin-bottom: 16px;
+  margin-left: 40px;
   .MyFaceRuleConntet {
       position: relative;
       width: 550px;
