抖音三方券

--- a/src/containers/ThirdCoupon/AlipayCoupon.less
+++ b/src/containers/ThirdCoupon/AlipayCoupon.less
@@ -460,7 +460,7 @@
 
 .createCouponModal__flex__ul {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     .createCouponModal__item__li {
         img  {
             display: inline-block;
