--- a/src/containers/ThirdCoupon/AlipayCoupon.less
+++ b/src/containers/ThirdCoupon/AlipayCoupon.less
@@ -389,6 +389,13 @@
         padding: 0 20px;
         overflow: hidden;
     }
+    .CouponTableList {
+        :global {
+            .ant-table-pagination {
+                float: left;
+            }
+        }
+    }
 }
 // 第三方支付宝券详情
 .CouponViewInfo {
