集点卡活动与券互斥

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -1828,6 +1828,22 @@
         left:480px;
         color:rgba(239, 72, 72, 0.81)
     }
+    .couponSwitch{
+        :global{
+            .ant-switch{
+                width: 48px;
+                height: 24px;
+                border-radius: 12px;
+            }
+            .ant-switch .ant-switch-inner{
+                line-height: 24px;
+            }
+            .ant-switch:after{
+                border-radius: 12px;
+            }
+        }
+    }
+
 }
 .inputAddonSelect{
     :global{
