支付宝间连M4升级

--- a/src/containers/ThirdCoupon/AlipayCoupon.less
+++ b/src/containers/ThirdCoupon/AlipayCoupon.less
@@ -267,9 +267,7 @@
         padding: 10px 18px 10px 12px;
     }
     .authorizeBottomTip {
-        height: 40px;
-        line-height: 40px;
-        padding-left: 13px;
+        padding: 10px 10px 10px 13px;
         background: #FFFBE6;
         border-radius: 0px 0px 4px 4px;
     }
