【礼品信息】不统一问题优化

--- a/src/containers/GiftNew/GiftAdd/GiftAdd.less
+++ b/src/containers/GiftNew/GiftAdd/GiftAdd.less
@@ -155,14 +155,16 @@
 }
 .selectFoodsWrapper{
     position: relative;
-    width: 486px;
-    // height: 390px;
+    width: 439px;
     background: #F7F7F7;
     border-radius: 3px;
     border: 1px solid #E7E7E7;
     padding: 15px;
-    margin-left: 154px;
-
+    margin-left: 127px;
+    .foodWrapperCont {
+        position: relative;
+        left: -13px;
+    }
     .foodWrapperHeader{
         font-size: 14px;
         font-family: MicrosoftYaHei;
