--- a/src/containers/GiftNew/GiftAdd/Crm.less
+++ b/src/containers/GiftNew/GiftAdd/Crm.less
@@ -575,7 +575,7 @@
     }
 }
 .logoGroupHeader {
-    width: 500px;
+    width: 551px;
     height: 28px;
     line-height: 28px;
     background: #F5FBFA;
@@ -584,6 +584,8 @@
     font-size: 14px;
     color: #666;
     position: relative;
+    left: -77px;
+    padding-left: 12px;
 
     &::before {
         content: '';
@@ -592,7 +594,7 @@
         display: block;
         width: 3px;
         height: 12px;
-        left: -3px;
+        left: 8px;
         top: 8px;
         background-color: #18B495;
     }
@@ -835,6 +837,8 @@
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
+    position: relative;
+    left: 15px;
 }
 
 .secondaryButton {
