--- a/src/containers/GiftNew/components/fakeBorderedLabel.less
+++ b/src/containers/GiftNew/components/fakeBorderedLabel.less
@@ -1,19 +1,25 @@
 .logoGroupHeader {
+    width: 547px;
+    height: 28px;
+    line-height: 28px;
+    background: #F5FBFA;
+    margin-left: 10px;
+    margin-bottom: 10px;
     font-size: 14px;
-    margin-left: -60px;
-    height: 32px;
-    line-height: 32px;
-    color: #333333;
+    color: #666;
     position: relative;
+    left: -144px;
+    padding-left: 12px;
+
     &::before {
+        content: '';
         margin-left: -7px;
         position: absolute;
         display: block;
         width: 3px;
         height: 12px;
-        content: '';
-        left: -3px;
-        top: 10px;
+        left: 8px;
+        top: 8px;
         background-color: #18B495;
     }
 }
