sortable bugs vs input props influnce

--- a/src/containers/SaleCenterNEW/common/SortableTable/sortableTable.less
+++ b/src/containers/SaleCenterNEW/common/SortableTable/sortableTable.less
@@ -1,4 +1,4 @@
-#drag-table {
+.tableWarp {
     width: 100%;
 
     thead {
@@ -21,9 +21,11 @@
     tbody {
         tr {
             line-height: 40px;
-            &:nth-child(even){
+
+            &:nth-child(even) {
                 background: #f9f9f9;
             }
+
             td {
                 border-right: 1px solid #e7e7e7;
                 color: #333;
