--- a/src/containers/NewCreatePromotions/cardStyle.less
+++ b/src/containers/NewCreatePromotions/cardStyle.less
@@ -46,6 +46,93 @@
         transform-origin: right bottom;
     }
 }
+.speNewContainer{
+    width: 281px;
+    height: 118px;
+    background: #ffffff;
+    // box-shadow: 0px 4px 16px 0px rgba(196, 196, 196, 0.5);
+    border-radius: 8px;
+    border: 1px solid #E9E9E9;
+    position: relative;
+    cursor: pointer;
+    flex: 0 auto;
+    padding: 20px;
+    margin: 0 30px 30px 0;
+    z-index: 1;
+    &:hover{
+        box-shadow: 0px 4px 16px 0px rgba(196, 196, 196, 0.5);
+        transition: 0.5s;
+        border: 1px solid white !important;
+    }
+    flex: 0 auto;
+    padding: 20px;
+    z-index: 1;
+    .xinImg{
+        height: 20px;
+        position: absolute;
+        left: -110px;
+    }
+    .title {
+        line-height: 1;
+        color: #666666;
+        font-size: 16px;
+        // display: inline-block;
+        position: absolute;
+        left: 97px;
+        color: #333333FF;
+        top: 22px;
+    }
+    .cardLogo {
+        transform: scale(0.62);
+        transform-origin: right bottom;
+    }
+    .desDiv {
+        font-size: 12px;
+        font-weight: 200;
+        color: #787878;
+        line-height: 16px;
+        white-space: inherit;
+        text-overflow: ellipsis;
+        display: inline-block;
+        width: 172px;
+        height: 30px;
+        position: relative;
+        left: 77px;
+        top: 29px;
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
+    }
+    .redValidDate{
+        position: relative;
+        top: 0;
+        left: 25px;
+        background: #ff5959;
+        color: #fff;
+        padding: 3px 5px;
+        font-style: normal;
+        z-index: 1;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 2px;
+        border-bottom-left-radius: 8px;
+    }
+    .validDate{
+        position: relative;
+        top: 0;
+        left: 25px;
+        background: #FAA03FFF;
+        color: #fff;
+        padding: 3px 5px;
+        font-style: normal;
+        z-index: 1;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 2px;
+        border-bottom-left-radius: 8px;
+    }
+}
 .speContainer{
     width: 281px;
     height: 100px;
@@ -204,6 +291,46 @@
 .speTagSpan{
     display: inline-block;
     position: relative;
+}
+.speTagSpanNew{
+    display: inline-block;
+    position: relative;
+    left: 77px;
+    top: 29px;
+    width: 50px;
+    height: 18px;
+    margin-right: 4px;
+    line-height: 18px;
+    text-align: center;
+    color: #1BB496;
+    background: rgba(27, 180, 150, 0.09);
+    border-radius: 3px;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    font-size: 12px;
+    font-weight: 500;
+}
+.speTagNew {
+    display: flex;
+    position: relative;
+    // top: -2px;
+    .speTagSpanNew_span {
+        position: relative;
+        left: 77px;
+        top: 26px;
+        > span {
+            display: inline-block;
+            width: 50px;
+            height: 18px;
+            margin-right: 4px;
+            line-height: 18px;
+            text-align: center;
+            color: #1BB496;
+            background: rgba(27, 180, 150, 0.09);
+            border-radius: 3px;
+        }
+    }
 }
 .speTagImg{
     margin-left: 4px;
