促销活动执行按钮位置变更

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2802,8 +2802,11 @@
     overflow: hidden;
     white-space: nowrap;
 }
-
 .switcher {
+    height: 16px;
+    width: 36px;
+}
+.switcherSale {
     height: 24px;
     width: 60px;
     border-radius: 20px;
