基础、特色营销卡片切换逻辑和UI

--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2308,6 +2308,12 @@
     .exportBtn {
         float: right;
     }
+    .cardImg {
+        img {
+            margin-right: 7px;
+            margin-bottom: 2px;
+        }
+    }
 }
 .Sale__Activite__Tip {
     padding-top: 0 !important;
@@ -2407,6 +2413,12 @@
     display: flex;
     height: 100%;
     align-items: center;
+}
+
+.cardImg {
+    img {
+        margin: 0 7px 2px 0;
+    }
 }
 
 .customPrimaryButton {
@@ -2823,7 +2835,7 @@
         width: 22px !important;
         height: 22px !important;    
         border-radius: 20px;
-        left: 2px;
+        left: 1px;
     }
     // line-height: 12px;
 }
@@ -2836,7 +2848,7 @@
     :global {
         .ant-switch-checked {
             &:after {
-                left: 59%;
+                left: 61%;
                 top: 0px;
             }
             .ant-switch-inner{
