--- a/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
+++ b/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
@@ -151,9 +151,16 @@
             float: right;
             width: 28px;
             height: 14px;
-            .switcherSaleCard {
-                width: 28px;
-                height: 14px;
+         
+        }
+        .switcherSaleCard {
+            width: 28px;
+            height: 14px;
+            border-radius: 15px;
+        }
+        :global {
+            .ant-switch:after {
+                border-radius: 12px;
             }
         }
         .centerBox {
