--- a/src/containers/NewCreatePromotions/NewSalePage.less
+++ b/src/containers/NewCreatePromotions/NewSalePage.less
@@ -78,6 +78,7 @@
 }
 .titleArea{
     display: flex;
+    justify-content: space-between;
     font-size: 20px;
     line-height: 20px;
     height: 50px;
@@ -95,7 +96,7 @@
     .platformBox {
         display: flex;
         height: 32px;
-        width: 288px;
+        width: 290px;
         // border: 1px solid #D9D9D9;
         border-radius: 4px;
         :first-child {
