--- a/src/containers/NewCreatePromotions/cardStyle.less
+++ b/src/containers/NewCreatePromotions/cardStyle.less
@@ -68,19 +68,24 @@
     padding: 20px;
     z-index: 1;
     .xinImg{
-        height: 20px;
+        width: 32px;
+        height: 32px;
         position: absolute;
         left: -110px;
     }
     .title {
-        line-height: 1;
-        color: #666666;
-        font-size: 16px;
         // display: inline-block;
         position: absolute;
         left: 97px;
         color: #333333FF;
         top: 22px;
+        max-width: 180px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        line-height: 1;
+        color: #666666;
+        font-size: 16px;
     }
     .cardLogo {
         transform: scale(0.62);
@@ -309,7 +314,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     font-size: 12px;
-    font-weight: 500;
+    // font-weight: 500;
 }
 .speTagNew {
     display: flex;
