--- a/src/containers/NewCreatePromotions/cardStyle.less
+++ b/src/containers/NewCreatePromotions/cardStyle.less
@@ -47,7 +47,7 @@
     }
 }
 .speNewContainer{
-    width: 281px;
+    width: 282px;
     height: 118px;
     background: #ffffff;
     // box-shadow: 0px 4px 16px 0px rgba(196, 196, 196, 0.5);
@@ -56,9 +56,13 @@
     position: relative;
     cursor: pointer;
     flex: 0 auto;
-    padding: 20px;
+    padding: 18px 20px;
     margin: 0 30px 30px 0;
     z-index: 1;
+    > div {
+        display: flex;
+        align-items: center
+    }
     &:hover{
         box-shadow: 0px 4px 16px 0px rgba(196, 196, 196, 0.5);
         transition: 0.5s;
@@ -75,10 +79,11 @@
     }
     .title {
         // display: inline-block;
-        position: absolute;
-        left: 97px;
+        // position: absolute;
+        // left: 97px;
+        margin-bottom: 8px;
         color: #333333FF;
-        top: 22px;
+        // top: 22px;
         max-width: 180px;
         overflow: hidden;
         white-space: nowrap;
@@ -101,9 +106,9 @@
         display: inline-block;
         width: 172px;
         height: 30px;
-        position: relative;
-        left: 77px;
-        top: 29px;
+        // position: relative;
+        // left: 77px;
+        // top: 29px;
         overflow: hidden;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
@@ -205,6 +210,10 @@
 .cardLogo {
     position: absolute;
 }
+.speCardLogo_new  {
+    height: 70px;
+    width: 70px;
+}
 .speCardLogo{
     position: absolute;
     left: 15px;
@@ -299,9 +308,9 @@
 }
 .speTagSpanNew{
     display: inline-block;
-    position: relative;
-    left: 77px;
-    top: 26px;
+    // position: relative;
+    // left: 77px;
+    // top: 26px;
     width: 50px;
     height: 18px;
     margin-right: 4px;
@@ -318,12 +327,15 @@
 }
 .speTagNew {
     display: flex;
-    position: relative;
+    // position: relative;
     // top: -2px;
+    display: flex;
+    height: 18px;
+    margin: 0 0 8px 0;
     .speTagSpanNew_span {
-        position: relative;
-        left: 77px;
-        top: 24px;
+        // position: relative;
+        // left: 77px;
+        // top: 24px;
         > span {
             display: inline-block;
             width: 50px;
