--- a/src/containers/PromotionV3/Camp/MyFaceRule/styles.less
+++ b/src/containers/PromotionV3/Camp/MyFaceRule/styles.less
@@ -5,7 +5,7 @@
   .MyFaceRuleConntet {
       position: relative;
       width: 550px;
-      height: 130px;
+      min-height: 130px;
       padding: 0 20px;
       background: #f9f9f9;
       border-radius: 4px;
@@ -35,6 +35,17 @@
     .tip {
       color: #FF221F;
       font-size: 12px;
+    }
+    .jumpAppBox {
+      margin-left: 10px;
+      > p {
+        display: flex;
+        align-items: center;
+        > span {
+          padding-right: 12px;
+          flex: 0 0 auto;
+        }
+      }
     }
   }
 }
