微信支付有礼无编辑操作

--- a/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
+++ b/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
@@ -108,6 +108,16 @@
 
         }
     }
+
+
+}
+.textDisabled,
+.textDisabled:link,
+.textDisabled:visited,
+.textDisabled:hover,
+.textDisabled:active {
+    color: gray;
+    cursor: not-allowed;
 }
 .cardContainer {
     overflow-y: auto;
