--- a/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
+++ b/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
@@ -287,6 +287,9 @@
                 margin-right: 12px;
                 cursor: pointer;
             }
+            > a {
+                color: #1BB496;
+            }
         }
 
         .activityOrigin {
