新版营销活动管理bugfixed

--- a/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
+++ b/src/containers/SpecialPromotionNEW/MySpecialActivities/mySpecialActivities.less
@@ -183,6 +183,16 @@
             height: 14px;
             border-radius: 15px;
         }
+        .switcherdisabled {
+            cursor: not-allowed;
+            color: #bcbcbc;
+            // :global{
+            //         .ant-switch-inner {
+            //             top: -1px;
+            //             height: 24px;
+            //         }
+            // }
+        }
         :global {
             .ant-switch:after {
                 border-radius: 12px;
