--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -2839,6 +2839,16 @@
     }
     // line-height: 12px;
 }
+.switcherdisabled {
+    cursor: not-allowed;
+    color: #bcbcbc;
+    :global{
+            .ant-switch-inner {
+                // top: -1px;
+                // height: 24px;
+            }
+    }
+}
 
 .sepcialActivesTable {
     .actionIconPostion {
