--- a/src/containers/SaleCenterNEW/ActivityPage.less
+++ b/src/containers/SaleCenterNEW/ActivityPage.less
@@ -3089,3 +3089,22 @@
         }
     }
 }
+
+.tipsBox {
+    display: inline-block;
+    width: 500px;
+    border: 1px solid #89caea;
+    line-height: 25px;
+    border-radius: 3px;
+    position: relative;
+    left: 30px;
+    color: black;
+    font-weight: 300;
+    font-size: 12px;
+    text-align: center;
+}
+
+.goToSettings {
+    color: #89caea;
+    cursor: pointer;
+}
