口令领券装修联动

--- a/src/containers/PromotionDecoration/style.less
+++ b/src/containers/PromotionDecoration/style.less
@@ -705,7 +705,7 @@
     top: 120px;
      left: 92px;
      width: 287px;
-     border-radius: 30px;
+     border-radius: 0 0  30px 30px;
      background: #f9dba9;
      .pwCouponImg {
         position: absolute;
@@ -835,8 +835,10 @@
 }
 .pwCouponSuccessModalImg {
     position: absolute;
-    width: 100%;
+    // width: 100%;
     z-index: 10;
+    width: 229px;
+    height: 122px;
 }
 
 .freeGiftSuccessModalCon,.blindGiftSuccessModalCon {
