--- a/src/containers/ThirdCoupon/AlipayCoupon.less
+++ b/src/containers/ThirdCoupon/AlipayCoupon.less
@@ -438,6 +438,16 @@
             background: url('http://res.hualala.com/basicdoc/5dbd185f-dd47-45b4-bbe3-d20392d6f0e5.png') no-repeat;
         }
     }
+    .signInfoDouyin {
+        &::after {
+            background: url('http://res.hualala.com/basicdoc/5c8c1443-44e9-41e0-a05f-5a7c7ea9718e.png') no-repeat;
+        }
+    }
+    // .signInfoEzhe {
+    //     &::after{
+    //         background: url('') no-repeat;
+    //     }
+    // }
     .signInfo {
         position: relative;
         margin: 0px 0 20px;
